release: bump version to 0.3.0